--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.7",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^7.13.0",
     "vite-plugin-pwa": "^1.2.0",
     "workbox-window": "^7.4.0"
